--- a/10. amazon-clone/src/input.css
+++ b/10. amazon-clone/src/input.css
@@ -1,3 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.address-container {
+    @apply flex items-center border border-transparent rounded-sm px-2 py-2;
+}
+
+.address-container:hover {
+    @apply border-white cursor-pointer; 
+}
+
+.item-nav-mid {
+    @apply mr-4 border border-transparent rounded-sm px-2 py-1 font-semibold;
+}
+
+.item-nav-mid:hover {
+    @apply border-white;
+}
+
+.item-nav-bot {
+    @apply border-b-2 border-transparent py-1 px-3;
+}
+
+.item-nav-bot:hover {
+    @apply text-orange-650 border-orange-650; 
+} 
+
+@screen md {
+    .address-container {
+        @apply py-0;
+    }
+}
+
